fix alignfull -> img inside 100%

--- a/sass/_partials/_image.scss
+++ b/sass/_partials/_image.scss
@@ -119,9 +119,6 @@
     margin-left: calc(-100vw / 2 + 720px / 2 - 15px);
     margin-right: calc(-100vw / 2 + 720px / 2 - 15px);
   }
-  img{
-    width: 100%;
-  }
 }
 
 .alignfull{
